@@ -21,6 +21,10 @@
 <p>Adds a Settings option to put all your saved tests and configurations into a specific default folder. This does not affect QADefault.cfg, which always comes from your Documents folder unless supplied on the command line at startup. This setting just defines the starting folder when you click a get, save, or load button.</p>
 <h2>Add a group delay display to impedance and gain tests</h2>
 <p>This is a very early implementation of group delay. It is always in ms and shows up in a tentative second Y axis.</p>
+<h2>Add Shift-Click option to legend labels for a legend group</h2>
+<p>Hold down a shift key while clicking a legend checkbox (in the legend window) and the entire group of lines with the same suffix (after the @) will hide/show. This
+helps deal with the large number of plot lines in the THD vs Amplitude and vs Frequency tests.</p>
+<p>&nbsp;</p>
 <h1>&nbsp;</h1>
 <h1>---- Older&nbsp; Entries ----</h1>
 <p>&nbsp;</p>
